<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.openanalytics</groupId>
    <artifactId>shinyproxy</artifactId>
    <version>3.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ShinyProxy</name>
    <description>deploy Shiny apps in an enterprise context</description>

    <organization>
        <name>Open Analytics NV</name>
        <url>https://www.shinyproxy.io/</url>
    </organization>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.7</version>
        <relativePath/>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <containerproxy.version>1.1.0-SNAPSHOT</containerproxy.version>
        <resource.delimiter>&amp;</resource.delimiter>
        <spring-boot.version>3.1.7</spring-boot.version>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>oa-nexus-snapshots</id>
            <name>OpenAnalytics Snapshots Repository</name>
            <url>https://nexus.openanalytics.eu/repository/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>oa-nexus-releases</id>
            <name>OpenAnalytics Release Repository</name>
            <url>https://nexus.openanalytics.eu/repository/releases</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>oa-nexus-snapshots</id>
            <name>OpenAnalytics Snapshots Repository</name>
            <url>https://nexus.openanalytics.eu/repository/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>oa-nexus-releases</id>
            <name>OpenAnalytics Snapshots Repository</name>
            <url>https://nexus.openanalytics.eu/repository/releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>eu.openanalytics</groupId>
            <artifactId>containerproxy</artifactId>
            <version>${containerproxy.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>datatables</artifactId>
            <version>1.12.1</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>datatables-buttons</artifactId>
            <version>2.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>datatables-responsive</artifactId>
            <version>2.2.7</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>handlebars</artifactId>
            <version>4.7.7</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>2.26-b03</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <!-- Dependency of lettuce and AWS SDK -> update to fix security issue -->
                <groupId>io.netty</groupId>
                <artifactId>netty-bom</artifactId>
                <version>4.1.86.Final</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>static/handlebars/node_modules/**</exclude>
                    <exclude>static/handlebars/.gitignore</exclude>
                    <exclude>static/handlebars/generate.sh</exclude>
                    <exclude>static/handlebars/*.handlebars</exclude>
                    <exclude>**/.gitignore</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                        <configuration>
                            <classifier>exec</classifier>
                            <mainClass>eu.openanalytics.containerproxy.ContainerProxyApplication</mainClass>
                        </configuration>
                    </execution>
                    <execution>
                        <id>build-info</id>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                        <configuration>
                            <additionalProperties>
                                <containerProxyVersion>${containerproxy.version}</containerProxyVersion>
                            </additionalProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${spring-boot.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.9.0</version>
                <configuration>
                    <header>LICENSE_HEADER</header>
                    <aggregate>true</aggregate>
                    <strictCheck>true</strictCheck>
                    <excludes>
                        <exclude>*.log</exclude>
                        <exclude>mvnw.cmd</exclude>
                        <exclude>mvnw</exclude>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.yml</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>LICENSE</exclude>
                        <exclude>LICENSE_HEADER</exclude>
                        <exclude>Dockerfile</exclude>
                        <exclude>README.md</exclude>
                        <exclude>**/*.json</exclude>
                        <exclude>.gitignore</exclude>
                        <exclude>src/deb/**</exclude>
                        <exclude>templates/**</exclude>
                        <exclude>src/main/resources/static/handlebars/node_modules/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>check-copyright-headers</id>
                        <phase>package</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.nicoulaj.maven.plugins</groupId>
                <artifactId>checksum-maven-plugin</artifactId>
                <version>1.9</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>files</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <fileSets>
                        <fileSet>
                            <directory>${project.build.directory}</directory>
                            <includes>
                                <include>*.jar</include>
                                <include>*.pom</include>
                            </includes>
                            <excludes>
                                <exclude>*.sha256</exclude>
                                <exclude>*.md5</exclude>
                            </excludes>
                        </fileSet>
                    </fileSets>
                    <algorithms>
                        <algorithm>SHA-256</algorithm>
                        <algorithm>MD5</algorithm>
                    </algorithms>
                    <attachChecksums>true</attachChecksums>
                    <csvSummary>false</csvSummary>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>owasp-dependency-check</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>6.1.6</version>
                        <configuration>
                            <suppressionFiles>
                                <suppressionFile>owasp-suppression.xml</suppressionFile>
                            </suppressionFiles>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
